Revision history for Perl module Devel::Leak::Object

0.93 XXX XX XXX 2009
        - Fix dumping to STDERR at END (previously dumped to STDOUT)
	- tests for that

0.92 Tue 11 Dec 2007
	- Updating to Module::Install 0.68
	- Updating to newer bundled tests

0.91 Fri 14 Sep 2007
	- Lexically disable warnings when overwriting DESTROY methods
	- Fixing a test

0.90 Wed 29 Aug 2007
	- MAJOR RELEASE: NOW WITH 38% ALL NEW EVIL!!!
	- Taken over maintenance and rewritten from scratch, using Scalar::Util
	- Now supports all types of objects, including IO and REF
	- Supports classes which overload stringification.
	- Support a couple more evil corner cases relating to SUPER::DESTROY
	- Accelerated and cached the DESTROY-time search for the DESTROY super-method

0.02 Tue Sep 21  2004
	- Remove call to Hook::LexWrap as this is not what is needed in
	this module. Do own wrapping.

0.01 Sat Sep 11  2004
	- Initial version.